# api/oas/auth/openapi.yaml
@@ -147,6 +147,117 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+  /login/old-fingerprint:
+    post:
+      summary: Use this API to fingerprint login
+      description: Use this API to fingerprint login
+      deprecated: true
+      tags:
+        - auth
+      operationId: oldFingerprintLogin
+      requestBody:
+        description: fingerprint login
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+                password:
+                  type: string
+                appCode:
+                  type: string
+              required:
+                - username
+                - password
+                - appCode
+      responses:
+        '200':
+          description: fingerprint login successful
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LoginResponse'
+        '400':
+          $ref: '#/components/responses/BadRequestError'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+  /login/fingerprint:
+    post:
+      summary: Use this API to fingerprint login
+      description: Use this API to fingerprint login
+      tags:
+        - auth
+      operationId: fingerprintLogin
+      requestBody:
+        description: fingerprint login
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                refreshToken:
+                  type: string
+                  description: the refreshToken
+              required:
+                - refreshToken
+      responses:
+        '200':
+          description: fingerprint login successful
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LoginResponse'
+        '400':
+          $ref: '#/components/responses/BadRequestError'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+  /login/bind-fingerprint:
+    post:
+      summary: Use this API to enable fingerprint login
+      description: Use this API to enable fingerprint login
+      tags:
+        - auth
+      operationId: bindFingerprint
+      requestBody:
+        description: enable fingerprint login
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                userPassword:
+                  type: string
+                  description: the userPassword
+              required:
+                - userPassword
+      responses:
+        '200':
+          description: enable fingerprint successful
+          content:
+            application/json:
+              schema:
+                type: boolean
+        '400':
+          $ref: '#/components/responses/BadRequestError'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /login/verify-factor:
     post:
       description: Verify a one-time password (OTP) value, provided for a second factor, when multi-factor authentication (MFA) is required.
